--- a/Home.html
+++ b/Home.html
@@ -19,6 +19,9 @@
       background-color: #fff;
       color: #333;
       height: 100%;
+        max-width: 100vw;
+  overflow-x: hidden;
+
     }
 
     .hero-image {
