--- a/Coaches.html
+++ b/Coaches.html
@@ -345,9 +345,7 @@
    ================ */
 @media (max-width: 480px) {
   .hero-content {
-    flex-direction: column;
-    padding: 20px;
-    gap: 30px;
+display: none;
   }
 
   .hero h1 {
@@ -406,9 +404,7 @@
    ================ */
 @media (min-width: 481px) and (max-width: 768px) {
   .hero-content {
-    flex-direction: column;
-    padding: 30px 20px;
-    gap: 40px;
+display: none;
   }
 
   .hero h1 {
@@ -448,9 +444,7 @@
    ================ */
 @media (min-width: 769px) and (max-width: 1024px) {
   .hero-content {
-    flex-direction: column;
-    padding: 40px;
-    gap: 40px;
+display: none;
   }
 
   .hero h1 {
