--- a/Coaches.html
+++ b/Coaches.html
@@ -571,7 +571,7 @@ display: none;
       <div style="display: flex; align-items: center; gap: 80px;">
         <div class="logo"><img src="logo.png"></div>
         <ul>
-          <li><a href="Home.html"><img src="home.png" class="nav-icon"> Home</a></li>
+          <li><a href="home.html"><img src="home.png" class="nav-icon"> Home</a></li>
           <li><a href="coaches.html"><img src="coaches.png" class="nav-icon"> Our Coaches</a></li>
           <li><a href="#"><img src="star.png" class="nav-icon"> Updates</a></li>
           <li><a href="home.html#contact"><img src="contact us.png" class="nav-icon"> Contact Us</a></li>
